--- a/css/mobile/index.less
+++ b/css/mobile/index.less
@@ -1,19 +1,79 @@
-.activity {
-    width: 100%;
-    padding: 1.625em 2.187em;
-    .list {
-        display: flex;
-        li {
-            .img-frame {
-                width: 5em;
-                height: 5em;
-                img {
+@white: #ffffff;
+@bg-color: #eef1f8;
+@color:#868f9c;
+body {
+    background: @bg-color;
+    color: @color;
+    .activity{
+        background: @white;
+        padding: 2.08rem 2.91rem;
+    }
+    .activity {
+        .list {
+            display: flex;
+            li {
+                margin-left: 6.66rem;
+                &:nth-child(1) {
+                    margin-left: 0;
+                }
+                .img-frame {
+                    width: 6.66rem;
+                    height: 6.66rem;
                     background-color: #4297ff;
+                    display: flex;
+                    align-items: center;
+                    border-radius: 1rem;
+                    justify-content: center;
+                    margin: 0 auto;
+                    img {
+                        width: 2.66rem;
+                    }
+                }
+                .title {
+                    font-size: 2rem;
+                    margin-top: 0.83rem;
                 }
             }
-            .title{
-                font-size: 1.5em;
+        }
+    }
+    .hot-block,.new-activity{
+        margin-top: 0.83rem;
+        background: @white;
+        padding: 1.83rem 2.91rem;
+    }
+    .hot-block{
+        
+    }
+    .new-activity{
+        .activity-picture{
+            .activity-picture-list{
+                display: flex;
+                li{
+                    &:nth-child(2n){
+                        margin-left: 2.91rem;
+                    }
+                    img{
+                        width: 26.16rem;
+                        height: 17rem;
+                    }
+                }
             }
+        }
+    }
+    //  通用标题头部
+    .block-header{
+        display: flex;
+        align-items: center;
+        margin-bottom: 2.91rem;
+        .block-icon{
+            display: block;
+            width: 1.83rem;
+            height: 2rem;
+            object-fit: contain;
+        }
+        .block-title{
+            font-size: 2rem;
+            margin-left: 1.33rem;
         }
     }
 }
