--- a/css/mobile/index.less
+++ b/css/mobile/index.less
@@ -60,11 +60,16 @@ body {
     }
     .hot-block {
         .swiper-container {
-//          height: 22rem;
+            height: 20rem;
             .swiper-wrapper {
                 .swiper-slide {
                     .hot-img {
                         width: 13rem;
+                    }
+                    .title{
+                        font-size: 2.4rem;
+                        margin-top: 1rem;
+                        text-align: center;
                     }
                 }
             }
