--- a/css/mobile/index.css
+++ b/css/mobile/index.css
@@ -19,10 +19,7 @@ body .activity .list {
   padding: 2rem 3rem;
 }
 body .activity .list li {
-  margin-left: 6.66rem;
-}
-body .activity .list li:nth-child(1) {
-  margin-left: 0;
+  flex: 1;
 }
 body .activity .list li .img-frame {
   width: 6.66rem;
@@ -40,6 +37,7 @@ body .activity .list li .img-frame img {
 body .activity .list li .title {
   font-size: 2rem;
   margin-top: 1rem;
+  text-align: center;
 }
 body .hot-block,
 body .new-activity {
@@ -60,6 +58,9 @@ body .hot-block .swiper-container .swiper-wrapper .swiper-slide .title {
 }
 body .new-activity .activity-picture .activity-picture-list {
   display: flex;
+}
+body .new-activity .activity-picture .activity-picture-list li {
+  flex: 1;
 }
 body .new-activity .activity-picture .activity-picture-list li:nth-child(2n) {
   margin-left: 2.91rem;
