--- a/css/pc/index.css
+++ b/css/pc/index.css
@@ -78,13 +78,8 @@
   .banner .content-frame {
     z-index: 1;
   }
-  .banner .content-frame .content {
-    position: absolute;
-    z-index: -1;
-    top: -23px;
-  }
   .banner .content-frame .content .person {
-    animation: fadeInDown 1.5s 0.4s ease both;
+    animation: fadeInDown 1.5s .4s ease both;
   }
   .banner .content-frame .content .explain .introduce-list li {
     display: -moz-box;
@@ -99,7 +94,11 @@
   .banner .content-frame .content .explain .introduce-list li .mark {
     display: block;
     animation: jiggle 2s ease-in infinite;
-    display: flex\0;
+    display: -moz-box;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
     /* ie9 */
   }
   .banner .content-frame .content .explain .introduce-list,
@@ -130,58 +129,32 @@
     object-fit: none;
   }
   .hero-list-frame .hero-list .list-content .detail-list li {
-    -webkit-transition: transform 0.3s;
-    transition: transform 0.3s;
+    -webkit-transition: transform .3s;
+    transition: transform .3s;
     -webkit-transform: translateY(0);
     transform: translateY(0);
   }
   .hero-list-frame .hero-list .list-content .detail-list li:nth-child(6n) {
     margin-right: 0;
   }
-  .hero-list-frame .hero-list .list-content .detail-list li .discount-describe {
-    background: #1b1f45;
-    position: relative;
-  }
   .hero-list-frame .hero-list .list-content .detail-list li .discount-describe img {
-    width: 147px;
-    height: 194px;
-    -webkit-transition: transform 0.5s;
-    transition: transform 0.5s;
+    -webkit-transition: transform .5s;
+    transition: transform .5s;
     -webkit-transform: scale(1);
     transform: scale(1);
   }
   .hero-list-frame .hero-list .list-content .detail-list li .discount-describe .describe {
-    position: absolute;
-    left: 0;
-    right: 0;
     bottom: 10px;
-    text-align: center;
-    font-size: 12px;
-    color: #ffffff;
-    line-height: 18px;
   }
   .hero-list-frame .hero-list .list-content .detail-list li .discount-describe .describe li {
     clear: both;
   }
-  .hero-list-frame .hero-list .list-content .detail-list li .discount-describe .describe li.now-price {
-    color: #ffd800;
-  }
   .hero-list-frame .hero-list .list-content .detail-list li:hover {
-    cursor: pointer;
     transform: translateY(-3%);
   }
   .hero-list-frame .hero-list .list-content .detail-list li:hover .discount-describe img {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
-  }
-  .hero-list-frame .hero-list .list-content .detail-list li:hover .buy-btn {
-    border-color: #ffd800;
-  }
-  .hero-list-frame .hero-list .list-content .detail-list li:hover .buy-btn .right-now {
-    background-image: url(../../img/right-now-choose.png);
-  }
-  .hero-list-frame .hero-list .list-content .detail-list li:hover .buy-btn .title {
-    color: #ffd800;
   }
   .footer .bg-footer {
     height: 654px;
@@ -189,41 +162,14 @@
   .footer .rule .rule-list li .number {
     border-radius: 50%;
     padding: 2px 7px;
-    margin-right: 1px;
     margin-right: 5px;
   }
   .floater {
-    position: fixed;
     right: 80px;
-    z-index: 999;
     top: 195px;
-  }
-  .floater .top {
-    position: relative;
-    text-align: center;
-    width: 56px;
-    margin: 0 auto;
-  }
-  .floater .top .title {
-    display: block;
-    line-height: 40px;
-    position: absolute;
-    bottom: -3px;
-    right: 15px;
-    font-size: 13px;
-    font-weight: bold;
-    color: #08060d;
-  }
-  .floater .top .top-icon {
-    background: url(../../img/top.png);
-    width: 56px;
-    height: 40px;
   }
   .floater .top:hover {
     cursor: pointer;
-  }
-  .floater .top:hover .top-icon {
-    background: url(../../img/top-cursor.png);
   }
   .floater .hero-list li {
     border-radius: 50%;
@@ -232,32 +178,9 @@
   .floater .hero-list li img {
     opacity: 0.5;
   }
-  .floater .hero-list li:hover,
-  .floater .hero-list li.active {
-    cursor: pointer;
-    border-color: #ffe400;
-  }
   .floater .hero-list li:hover img,
   .floater .hero-list li.active img {
-    filter: alpha(opacity=100);
-  }
-  .bg-circulation.bg03 {
-    /* Safari和Chrome */
-    /* IE 9 */
-    /* Firefox 旋转属性，参数表示角度(deg表示角度)，负数逆时针，正数顺时针 */
-    /* Opera */
-  }
-  .clean {
-    clear: both;
-  }
-  .text-left {
-    text-align: left;
-  }
-  .text-right {
-    text-align: right;
-  }
-  .mark {
-    color: #ffea00;
+    opacity: 1;
   }
 }
 @media screen and (-ms-high-contrast: active) and (max-height: 900px), (-ms-high-contrast: /* IE10+ */ none) and (max-height: 900px), (-webkit-min-device-pixel-ratio: /* Chrome */ 0) and (max-height: 900px), (/* FireFox */ moz-document url-prefix()) and (max-height: 900px), (min-width: /* Chrome 和 opera */ 0) and (max-height: 900px) {
@@ -310,34 +233,59 @@
 @keyframes icon-bounce {
   0%,
   100% {
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    /* Safari和Chrome */
+    -ms-transform: rotate(0deg);
+    /* IE 9 */
+    -moz-transform: rotate(0deg);
+    /* Firefox 旋转属性，参数表示角度(deg表示角度)，负数逆时针，正数顺时针 */
+    -o-transform: rotate(0deg);
+    /* Opera */
   }
   25% {
-    -moz-transform: rotate(15deg);
-    -ms-transform: rotate(15deg);
-    -webkit-transform: rotate(15deg);
     transform: rotate(15deg);
+    -webkit-transform: rotate(15deg);
+    /* Safari和Chrome */
+    -ms-transform: rotate(15deg);
+    /* IE 9 */
+    -moz-transform: rotate(15deg);
+    /* Firefox 旋转属性，参数表示角度(deg表示角度)，负数逆时针，正数顺时针 */
+    -o-transform: rotate(15deg);
+    /* Opera */
   }
   50% {
-    -moz-transform: rotate(-15deg);
-    -ms-transform: rotate(-15deg);
-    -webkit-transform: rotate(-15deg);
     transform: rotate(-15deg);
+    -webkit-transform: rotate(-15deg);
+    /* Safari和Chrome */
+    -ms-transform: rotate(-15deg);
+    /* IE 9 */
+    -moz-transform: rotate(-15deg);
+    /* Firefox 旋转属性，参数表示角度(deg表示角度)，负数逆时针，正数顺时针 */
+    -o-transform: rotate(-15deg);
+    /* Opera */
   }
   75% {
-    -moz-transform: rotate(5deg);
-    -ms-transform: rotate(5deg);
-    -webkit-transform: rotate(5deg);
     transform: rotate(5deg);
+    -webkit-transform: rotate(5deg);
+    /* Safari和Chrome */
+    -ms-transform: rotate(5deg);
+    /* IE 9 */
+    -moz-transform: rotate(5deg);
+    /* Firefox 旋转属性，参数表示角度(deg表示角度)，负数逆时针，正数顺时针 */
+    -o-transform: rotate(5deg);
+    /* Opera */
   }
   85% {
-    -moz-transform: rotate(-5deg);
-    -ms-transform: rotate(-5deg);
-    -webkit-transform: rotate(-5deg);
     transform: rotate(-5deg);
+    -webkit-transform: rotate(-5deg);
+    /* Safari和Chrome */
+    -ms-transform: rotate(-5deg);
+    /* IE 9 */
+    -moz-transform: rotate(-5deg);
+    /* Firefox 旋转属性，参数表示角度(deg表示角度)，负数逆时针，正数顺时针 */
+    -o-transform: rotate(-5deg);
+    /* Opera */
   }
 }
 @keyframes jiggle {
