--- a/css/pc/indexIE.less
+++ b/css/pc/indexIE.less
@@ -4,6 +4,7 @@
 @white: #ffffff;
 @golden-yellow: #ffd800;
 @bleak: #000000;
+@mark-color:#ffea00;
 body {
     color: @purple;
     cursor: default;
@@ -32,7 +33,7 @@ body {
     position: relative;
     height: 790px;
     margin: 0 auto;
-//  *margin-bottom: 100px;
+    //  *margin-bottom: 100px;
     .banner-bg {
         position: absolute;
         width: 100%;
@@ -60,7 +61,7 @@ body {
             position: absolute;
             z-index: -1;
             top: -23px;
-            *top:-140px;
+            *top: -140px;
             .person {
                 margin-left: 100px;
             }
@@ -88,7 +89,7 @@ body {
                         margin-right: 10px;
                     }
                 }
-                .feeling-lucky{
+                .feeling-lucky {
                     margin-top: 10px;
                     cursor: pointer;
                 }
@@ -172,8 +173,7 @@ body {
                             font-size: 12px;
                             color: @white;
                             line-height: 18px;
-                            *bottom:55px !important;
-                            
+                            *bottom: 55px !important;
                             li {
                                 clear: both;
                                 &.now-price {
@@ -228,18 +228,13 @@ body {
     width: 100%;
     padding: 175px 0 0 0;
     position: relative;
-//  margin-top: 77px;
     .bg-footer {
         position: absolute;
         left: 0;
         right: 0;
         top: -1px;
-//      *top: -78px;
-//      _top: -90px;
         bottom: 0;
         width: 100%;
-//      *height: 680px;
-//      _height: 700px;
         z-index: -1;
     }
     .rule {
@@ -265,7 +260,7 @@ body {
                     color: #000000;
                     padding: 7px 10px;
                     background: @purple;
-                    &:hover{
+                    &:hover {
                         cursor: pointer;
                         color: @white;
                         text-decoration: none;
@@ -332,7 +327,7 @@ body {
         &:hover {
             cursor: pointer;
             .top-icon {
-                background: url(../img/top-cursor.png);
+                background: url(../../img/top-cursor.png);
             }
         }
     }
@@ -362,26 +357,18 @@ body {
 }
 
 .bg-circulation {
-//  background: url(../img/bg-circulation-01.png) no-repeat;
     width: 100%;
     position: absolute;
     z-index: -1;
     height: 454px;
-//  *height: 516px;
+//  ie6/7
+    *height: 455px;
+//  IE8
+    height: 455px\9;
     min-width: 1024px;
-    &.bg01{
-//      *margin-top: -100px;
-    }
-    &.bg02 {
-//      margin-top: 26px;
-//      *margin-top: -67px;
-//      _margin-top: -71px;
-    }
-    &.bg03 {
-//      margin-top: 52px;
-//      *margin-top: -34px;
-//      _margin-top: -42px;
-    }
+    &.bg01 {}
+    &.bg02 {}
+    &.bg03 {}
 }
 
 .clean {
@@ -397,5 +384,5 @@ body {
 }
 
 .mark {
-    color: #ffea00;
+    color:@mark-color;
 }
